添加情绪详情页

--- a/templates/big.html
+++ b/templates/big.html
@@ -13,7 +13,7 @@
 
     <link type="image/x-icon" rel="shortcut icon" href={% static "/images/favicon.ico" %}>
 
-    <title>津眼</title>
+    <title>校园态势感知</title>
 
 {#    <script src={% static "js/require.min.js" %}></script>#}
 
@@ -193,7 +193,7 @@
         </div>
         <!-- 舆论情绪 -->
         <div class="module-wrapper opinion-emotion">
-            <div class="module-title"><span class="iconfont icon-yuqing"></span>舆论情绪</div>
+            <div class="module-title"><span class="iconfont icon-yuqing"></span><a style="color: #fff606;" href="/detail">校园情绪</a></div>
             <div id="discuss-emotion" class="box light-corner discuss-emotion"></div>
         </div>
     </div>
