修改详情页面padding

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -31,7 +31,7 @@
 <canvas id="bg"></canvas>
 <div class="body clearfix">
 {#    <%--为民--%>#}
-    <div class="yuqing-wrapper wrapper">
+    <div class="weimin-wrapper wrapper">
         <!-- 视角 -->
         <div class="box light-corner view-core toogle-tab-element">
             <div class="view-table start_box box_align pack_center">
@@ -46,7 +46,7 @@
         </div>
     </div>
 {#    <%--党建--%>#}
-    <div class="yuqing-wrapper wrapper">
+    <div class="dangjian-wrapper wrapper">
         <!-- 视角 -->
         <div class="box light-corner view-core toogle-tab-element">
             <div class="view-table start_box box_align pack_center">
