社会舆情=>社会关注

--- a/templates/big.html
+++ b/templates/big.html
@@ -186,7 +186,7 @@
 
         <!-- 近一个月热点 -->
         <div class="module-wrapper">
-            <div class="module-title"><span class="iconfont icon-yuqing"></span>社会舆情</div>
+            <div class="module-title"><span class="iconfont icon-yuqing"></span>社会关注</div>
 {#            <div id="hot-info" class="box light-corner hot-info"></div>#}
             <div id="hot-info" class="box light-corner discuss-emotion"></div>
 
