--- a/templates/big.html
+++ b/templates/big.html
@@ -36,7 +36,7 @@
     <div class="weimin-wrapper wrapper">
         <!-- 为民预警 -->
         <div class="box service-work light-corner">
-            <p class="service-p ellipsis service-title"><span class="iconfont icon-weimin"></span>投诉预警</p>
+            <p class="service-p ellipsis service-title"><span class="iconfont icon-weimin"></span>师生诉求</p>
             <ul class="service-ul" id="moment-yujing">
             </ul>
         </div>
@@ -44,7 +44,7 @@
         <!-- 为民监督 -->
         <div class="box light-corner question-detail">
             <span class="trig"></span>
-            <p class="font20 service-title"><span class="iconfont icon-weimin"></span>投诉监督</p>
+            <p class="font20 service-title"><span class="iconfont icon-weimin"></span>诉求详情</p>
             <div class="question-box box start_box box_orient box_pack" id="moment-info">
                 <p class="questions ellipisis">问题：</p>
                 <div class="start_box box_align box_pack">
@@ -109,7 +109,7 @@
 
         <!-- 为民服务效率 -->
         <div class="module-wrapper service-efficiency toogle-tab-element box light-corner" >
-            <div class="module-title"><span class="iconfont icon-weimin "></span>投诉效率</div>
+            <div class="module-title"><span class="iconfont icon-weimin "></span>诉求效率</div>
             <div id="moment-stat" class="moment-chart  effect-service" style="z-index: 100; visibility: visible;"></div>
             <div id="moment-stat2" class="moment-chart  hidden  effect-service" style="z-index: 50; visibility: hidden;"></div>
             <div id="type-tab"  class="moment-tab-type active">类型</div>
