--- a/templates/big.html
+++ b/templates/big.html
@@ -169,7 +169,7 @@
         <!-- 视角 -->
         <div class="box light-corner view-core toogle-tab-element">
             <div class="view-table start_box box_align pack_center">
-                <div class="table-item table-item-active  start_box box_align pack_center box-flex" id="inner-view-tab"><span class="iconfont icon-yuqing"></span>实名热点<span class="unqie-guang"></span></div>
+                <div class="table-item table-item-active  start_box box_align pack_center box-flex" id="inner-view-tab"><span class="iconfont icon-yuqing"></span>近月热点<span class="unqie-guang"></span></div>
                {% comment %} <div class="table-item  start_box box_align pack_center box-flex" id="outer-view-tab"><span class="iconfont icon-yuqing"></span>匿名热点（待定）<span class="unqie-guang"></span></div>{% endcomment %}
             </div>
             <div class="view-list-wrapper">
