--- a/templates/big.html
+++ b/templates/big.html
@@ -199,9 +199,9 @@
     </div>
 
     <div id="menu-tab" class="clearfix">
-        <a href="javascript:;" id="weimin-tab" class="item"><span class="iconfont icon-weimin"></span>为民</a>
-        <a href="javascript:;" id="dangjian-tab" class="item active"><span class="iconfont icon-dangjian"></span>党建</a>
-        <a href="javascript:;" id="yuqing-tab" class="item"><span class="iconfont icon-yuqing"></span>舆情</a>
+        <a href="javascript:;" id="weimin-tab" class="item"><span class="iconfont icon-weimin"></span>诉求</a>
+        <a href="javascript:;" id="dangjian-tab" class="item active"><span class="iconfont icon-dangjian"></span>活跃程度</a>
+        <a href="javascript:;" id="yuqing-tab" class="item"><span class="iconfont icon-yuqing"></span>情绪</a>
     </div>
 </div>
 </body>
