诉求效率加入正在处理的

--- a/templates/big.html
+++ b/templates/big.html
@@ -216,5 +216,5 @@
 <script src={% static "js/underscore-min.js" %}></script>
 <script src={% static "js/date.format.js" %}></script>
 <script src={% static "js/djyun_big.js" %}></script>
-{#<script src={% static "js/bg.js" %}></script>#}
+<script src={% static "js/bg.js" %}></script>
 </html>
