校园情绪=>师生情绪

--- a/templates/big.html
+++ b/templates/big.html
@@ -193,7 +193,7 @@
         </div>
         <!-- 舆论情绪 -->
         <div class="module-wrapper opinion-emotion">
-            <div class="module-title"><span class="iconfont icon-yuqing"></span><a style="color: #fff606;" href="/detail">校园情绪</a></div>
+            <div class="module-title"><span class="iconfont icon-yuqing"></span><a style="color: #fff606;" href="/detail">师生情绪</a></div>
             <div id="discuss-emotion" class="box light-corner discuss-emotion"></div>
         </div>
     </div>
