--- a/templates/big.html
+++ b/templates/big.html
@@ -188,6 +188,8 @@
         <div class="module-wrapper">
             <div class="module-title"><span class="iconfont icon-yuqing"></span>社会关注</div>
 {#            <div id="hot-info" class="box light-corner hot-info"></div>#}
+
+{#            <div class="box light-corner discuss-emotion"><iframe src="static/images/x.svg" align="center" width="100%"></iframe> </div>#}
             <div id="hot-info" class="box light-corner discuss-emotion"></div>
 
         </div>
