--- a/templates/big.html
+++ b/templates/big.html
@@ -189,7 +189,7 @@
             <div class="module-title"><span class="iconfont icon-yuqing"></span>社会关注</div>
 {#            <div id="hot-info" class="box light-corner hot-info"></div>#}
 
-{#            <div class="box light-corner discuss-emotion"><iframe src="static/images/x.svg" align="center" width="100%"></iframe> </div>#}
+{#            <div class="box light-corner discuss-emotion" style="display:block;" text-align="center"><image src="static/images/x.svg" wight="100px"></image> </div>#}
             <div id="hot-info" class="box light-corner discuss-emotion"></div>
 
         </div>
