--- a/templates/run.html
+++ b/templates/run.html
@@ -52,7 +52,7 @@
 <script src={% static "js/echarts.min.js" %}></script>
 <script src={% static "js/mustache.min.js" %}></script>
 <script src={% static "js/china.js" %}></script>
-<script src={% static "js/map3.js" %}></script>
+{#<script src={% static "js/map3.js" %}></script>#}
 <script src={% static "js/mobiletest.js" %}></script>
 <script src={% static "js/underscore-min.js" %}></script>
 <script src={% static "js/date.format.js" %}></script>
